--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,21 @@
 services:
-  - type: web
-    name: feedback-portal
+  - type: web_service
+    name: survey-backend
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10.0
-      - key: DATABASE_URL
-        sync: false
-      - key: SECRET_KEY
-        generateValue: true
-      - key: ADMIN_USERNAME
-        value: admin
-      - key: ADMIN_PASSWORD
-        value: admin123
+    # Use the backend folder as the working root for build/start
+    root: backend
+    buildCommand: "pip install -r requirements.txt"
+    # Recommended production start command (uses gunicorn + uvicorn workers)
+    startCommand: "gunicorn -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:$PORT --workers 2"
+    # Auto-deploy on every push
+    autoDeploy: true
+
+  - type: static_site
+    name: survey-frontend
+    # Root directory that contains your static site sources
+    root: frontend
+    # No build step required for plain HTML/CSS/JS — leave empty
+    buildCommand: ""
+    # The directory to publish (for plain static site this is the frontend folder itself)
+    publishPath: frontend
+    autoDeploy: true
